removed stuff and updated for SDK 1.7

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,6 +48,7 @@ file.reference.bcprov-ext-jdk12-154.jar=/Users/juanse254/Desktop/crypto-154/jars
 file.reference.bcprov-ext-jdk13-154.jar=/Users/juanse254/Desktop/crypto-154/jars/bcprov-ext-jdk13-154.jar
 file.reference.bcprov-ext-jdk14-154.jar=/Users/juanse254/Desktop/crypto-154/jars/bcprov-ext-jdk14-154.jar
 file.reference.bcprov-ext-jdk15on-154.jar=/Users/juanse254/Desktop/crypto-154/jars/bcprov-ext-jdk15on-154.jar
+file.reference.bcprov-ext-jdk15on-160.jar=../../../../Volumes/Macintosh HD/Users/juanse254/Desktop/bcprov-ext-jdk15on-160.jar
 file.reference.bcprov-jdk12-154.jar=/Users/juanse254/Desktop/crypto-154/jars/bcprov-jdk12-154.jar
 file.reference.bcprov-jdk13-154.jar=/Users/juanse254/Desktop/crypto-154/jars/bcprov-jdk13-154.jar
 file.reference.bcprov-jdk14-154.jar=/Users/juanse254/Desktop/crypto-154/jars/bcprov-jdk14-154.jar
@@ -61,11 +62,13 @@ file.reference.commons-codec-1.10-sources.jar=/Users/juanse254/Downloads/commons
 file.reference.commons-codec-1.10-test-sources.jar=/Users/juanse254/Downloads/commons-codec-1.10 2/commons-codec-1.10-test-sources.jar
 file.reference.commons-codec-1.10-tests.jar=/Users/juanse254/Downloads/commons-codec-1.10 2/commons-codec-1.10-tests.jar
 file.reference.commons-codec-1.10.jar=/Users/juanse254/Downloads/commons-codec-1.10 2/commons-codec-1.10.jar
+file.reference.commons-codec-1.11.jar=../../../../Volumes/OS Extension/Downloads/commons-codec-1.11/commons-codec-1.11.jar
 file.reference.commons-io-2.4-javadoc.jar=/Users/juanse254/Downloads/commons-io-2.4/commons-io-2.4-javadoc.jar
 file.reference.commons-io-2.4-sources.jar=/Users/juanse254/Downloads/commons-io-2.4/commons-io-2.4-sources.jar
 file.reference.commons-io-2.4-test-sources.jar=/Users/juanse254/Downloads/commons-io-2.4/commons-io-2.4-test-sources.jar
 file.reference.commons-io-2.4-tests.jar=/Users/juanse254/Downloads/commons-io-2.4/commons-io-2.4-tests.jar
 file.reference.commons-io-2.4.jar=/Users/juanse254/Downloads/commons-io-2.4/commons-io-2.4.jar
+file.reference.commons-io-2.6.jar=../../../../Volumes/OS Extension/Downloads/commons-io-2.6/commons-io-2.6.jar
 file.reference.jce-ext-jdk12-154.jar=/Users/juanse254/Desktop/crypto-154/jars/jce-ext-jdk12-154.jar
 file.reference.jce-ext-jdk13-154.jar=/Users/juanse254/Desktop/crypto-154/jars/jce-ext-jdk13-154.jar
 file.reference.jce-jdk12-154.jar=/Users/juanse254/Desktop/crypto-154/jars/jce-jdk12-154.jar
@@ -113,7 +116,10 @@ javac.classpath=\
     ${file.reference.commons-codec-1.10-sources.jar}:\
     ${file.reference.commons-codec-1.10-test-sources.jar}:\
     ${file.reference.commons-codec-1.10-tests.jar}:\
-    ${file.reference.commons-codec-1.10.jar}
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.bcprov-ext-jdk15on-160.jar}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.commons-codec-1.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
